# reverse-engineering-training

./: 99-acceleratorinator.rules  README.md  acceleratorinator.h
acceleratorinator/: Cargo.toml  README.md  build.rs
acceleratorinator-sys/: Cargo.toml  build.rs  wrapper.h
acceleratorinator/src/: lib.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs
