[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.6", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-nrf = { version = "0.2", features = ["defmt", "nrf52840", "gpiote", "time-driver-rtc1", "time", "unstable-pac"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-time = "0.3.2"
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", default-features = false }
tinybmp = "0.6.0"
embassy-sync = { version = "0.6.0", features = ["defmt"] }
bitvec = { version = "1.0.1", default-features = false }


[profile.release]
lto = true
debug = true
opt-level = "z"
panic = "abort"
codegen-units = 1
incremental = false
